feat(target): pause cluster evaluations
